--- a/Resources/i18n/fr.json
+++ b/Resources/i18n/fr.json
@@ -1,3 +1,70 @@
 {
-	
+	"main": {
+		"searchHint": "Trouver un skin...",
+		"skin": {
+			"description": "Description",
+			"creation": "Date de création"
+		},
+		"skins": "%s skins",
+		"wear": "Porter"
+	},
+	"settings": {
+		"title": "Préférences",
+		"username": "Utilisateur",
+		"password": "Mot de passe",
+		"header": "Identifiant minecraft.net",
+		"footer": {
+			"migratedAccount": "Si votre compte a été migré vers un compte Mojang, vous devez utiliser votre adresse email au lieu de votre pseudo Minecraft.",
+			"privacy": "Note: nous ne stockerons ou n'utiliserons AUCUNE de vos informations pour autre-chose que changer votre skin Minecraft. Les informations de votre compte sont stockées de façon sécurisée dans le trousseau d'iOS.",
+			"height": "250"
+		}
+	},
+	"addProcess": {
+		"skinInfo": {
+			"title": "Informations",
+			"shortTitle": "Info skin",
+			"name": "Nom du skin",
+			"description": "Description",
+			"fieldWidth": "155",
+			"error": {
+				"nameDescription": "Vous devez spécifier un nom et une description.",
+				"name": "Vous devez spécifier un nom.",
+				"description": "Vous devez spécifier une description.",
+				"length": "Le nom doit être de 16 caractères au maximum."
+			},
+			"method": {
+				"title": "Ajouter le skin...",
+				"pseudo": "Depuis un pseudo existant",
+				"url": "Depuis une URL",
+				"cancel": "Annuler"
+			}
+		},
+		"urlSelect": {
+			"urlTitle": "Collez ou tapez l'URL du skin (doit être en PNG) :",
+			"pseudoTitle": "Tapez le pseudo Minecraft (sensible à la casse) :",
+			"blankField": "Ce champ ne peut pas être vide.",
+			"invalidUrl": "Cette URL est invalide (DOIT être un fichier PNG)."
+		},
+		"process": {
+			"title": "Chargement...",
+			"progress": {
+				"initial": "Reticulating Splines...",
+				"skin": "Téléchargement du skin...",
+				"preview": "Téléchargement des aperçus...",
+				"database": "Ajout dans la base de données...",
+				"success": "Ajouté avec succès ! :)",
+				"fail": "Raté :("
+			},
+			"error": {
+				"skin": "Erreur lors du téléchargement du skin. Abandon.",
+				"preview": {
+					"title": "Erreur réseau",
+					"message": "Erreur lors du téléchargement de l'aperçu. Il n'y aura pas d'aperçu pour ce skin. Continuer quand même ?",
+					"cancel": "Annuler",
+					"ok": "Continuer"
+				}
+			}
+		},
+		"next": "Suivant"
+	}
 }
