Filled the credits window a bit

--- a/Resources/i18n/fr.json
+++ b/Resources/i18n/fr.json
@@ -73,6 +73,9 @@
 		},
 		"next": "Suivant"
 	},
+	"credits": {
+		"title": "Crédits"
+	},
 	"buttons": {
 		"edit": "Modifier",
 		"done": "Terminé",
