--- a/Resources/i18n/fr.json
+++ b/Resources/i18n/fr.json
@@ -74,7 +74,11 @@
 		"next": "Suivant"
 	},
 	"credits": {
-		"title": "Crédits"
+		"title": "Crédits",
+		"developer": "Développeur :",
+		"platform": "Plateforme :",
+		"thanks": "Remerciements à :",
+		"modules": "Modules :"
 	},
 	"buttons": {
 		"edit": "Modifier",
