--- a/Resources/i18n/fr.json
+++ b/Resources/i18n/fr.json
@@ -12,6 +12,12 @@
 			"loginFail": "Échec de connexion",
 			"uploadFail": "Échec de l'envoi",
 			"success": "Envoi terminé !"
+		},
+		"skinReplace": {
+			"title": "Remplacer votre skin ?",
+			"message": "Voulez-vous vraiment remplacer votre skin par \"%s\" ?",
+			"cancel": "Non",
+			"okay": "Oui"
 		}
 	},
 	"settings": {
