--- a/Resources/i18n/fr.json
+++ b/Resources/i18n/fr.json
@@ -18,7 +18,8 @@
 			"message": "Voulez-vous vraiment remplacer votre skin par \"%s\" ?",
 			"cancel": "Non",
 			"okay": "Oui"
-		}
+		},
+		"loginError": "Échec lors de la connexion à minecraft.net. Vérifiez votre nom d'utilisateur et votre mot de passe dans les préférences."
 	},
 	"settings": {
 		"title": "Préférences",
