--- a/Resources/i18n/default.json
+++ b/Resources/i18n/default.json
@@ -13,13 +13,19 @@
 			"uploadFail": "Upload failed",
 			"success": "Upload complete!"
 		},
-		"skinReplace": {
-			"title": "Replace skin?",
-			"message": "Do you really want to replace your skin with \"%s\"?",
-			"cancel": "No",
-			"okay": "Yes"
-		},
-		"loginError": "Could not connect to minecraft.net. Please check your login and password in the preferences."
+		"skinUpload": {
+			"confirm": {
+				"title": "Replace skin?",
+				"message": "Do you really want to replace your skin with \"%s\"?",
+				"cancel": "No",
+				"okay": "Yes"
+			},
+			"error": {
+				"title": "Upload error",
+				"login": "Could not connect to minecraft.net. Please check your login and password in the preferences.",
+				"upload": "Could not upload the skin to minecraft.net. Please try again later."
+			}
+		}
 	},
 	"settings": {
 		"title": "Settings",
