--- a/Resources/i18n/fr.json
+++ b/Resources/i18n/fr.json
@@ -35,7 +35,8 @@
 		"footer": {
 			"migratedAccount": "Si votre compte a été migré vers un compte Mojang, vous devez utiliser votre adresse email au lieu de votre pseudo Minecraft.",
 			"privacy": "Note: nous ne stockerons ou n'utiliserons AUCUNE de vos informations pour autre-chose que changer votre skin Minecraft. Les informations de votre compte sont stockées de façon sécurisée dans le trousseau d'iOS."
-		}
+		},
+		"donate": "Faire un don"
 	},
 	"addProcess": {
 		"skinInfo": {
@@ -96,5 +97,21 @@
 		"edit": "Modifier",
 		"done": "Terminé",
 		"close": "Fermer"
+	},
+	"webview": {
+		"action": {
+			"safari": "Ouvrir dans Safari",
+			"email": "Envoyer par email",
+			"cancel": "Annuler"
+		},
+		"email": {
+			"subject": "Faire un don à outa[dev]",
+			"link": "Cliquez ici pour donner !",
+			"message": "Je vois que vous considérez de faire un don à outa[dev]... merci beaucoup, ça aide vraiment ! &lt;3"
+		},
+		"error": {
+			"title": "Erreur",
+			"message": "Erreur lors du chargement de %s : %s"
+		}
 	}
 }
