--- a/Resources/i18n/default.json
+++ b/Resources/i18n/default.json
@@ -37,7 +37,7 @@
 		"title": "Settings",
 		"username": "Username",
 		"password": "Password",
-		"header": "Minecraft.net Account ID",
+		"header": "Minecraft.net Login Credentials",
 		"footer": {
 			"migratedAccount": "If your account has been migrated to a Mojang account, you have to use your email address instead of your Minecraft username.",
 			"privacy": "Note: we will NEVER store or use any of your informations for anything else than switching your Minecraft skins. Your account info is stored securely in the iOS keychain."
