Added help text when there is no skin in the app

--- a/Resources/i18n/default.json
+++ b/Resources/i18n/default.json
@@ -10,7 +10,10 @@
 			"close": "Close"
 		},
 		"noSelectedSkin": "No skin selected.",
-		"noContent": "No skins added yet",
+		"noContent": {
+			"title": "No skin has been added yet.",
+			"help": "To add a skin, tap \"Edit\", ten \"+\"."
+		},
 		"skins": "%s skins",
 		"progressBar": {
 			"login": "Logging in...",
