Fixed a French translation

--- a/Resources/i18n/fr.json
+++ b/Resources/i18n/fr.json
@@ -3,7 +3,7 @@
 		"searchHint": "Trouver un skin...",
 		"skinList": "Liste des skins",
 		"skinDetails": {
-			"title": "Liste des skins",
+			"title": "Détails du skin",
 			"description": "Description",
 			"creation": "Date de création",
 			"wear": "Porter ce skin",
