Localized all new strings

--- a/Resources/i18n/default.json
+++ b/Resources/i18n/default.json
@@ -106,5 +106,9 @@
 		"edit": "Edit",
 		"done": "Done",
 		"close": "Close"
+	},
+	"editSkin": {
+		"short": "Edit",
+		"title": "Edit Skin Info"
 	}
 }
