Add hint text on info.js

--- a/Resources/i18n/default.json
+++ b/Resources/i18n/default.json
@@ -51,6 +51,7 @@
 			"title": "Skin Information",
 			"shortTitle": "Skin Info",
 			"name": "Skin Name",
+			"nameHint": "My Awesome Skin",
 			"description": "Description",
 			"fieldWidth": "165",
 			"error": {
