--- a/Resources/i18n/default.json
+++ b/Resources/i18n/default.json
@@ -14,7 +14,7 @@
 		"noSelectedSkin": "No skin selected.",
 		"noContent": {
 			"title": "No skin has been added yet.",
-			"help": "To add a skin, tap \"Edit\", then \"+\"."
+			"help": "To add a skin, tap \"+\"."
 		},
 		"skins": "%s skins",
 		"progressBar": {
