--- a/Resources/i18n/fr.json
+++ b/Resources/i18n/fr.json
@@ -110,5 +110,11 @@
 	"editSkin": {
 		"short": "Modifier",
 		"title": "Modifier les infos..."
+	},
+	"restoreDatabase": {
+		"title": "Erf...",
+		"message": "Nous n'avons pas réussi à ouvrir le fichier qui contient vos skins, pour une raison quelconque.\nHeureusement, une sauvegarde a été effectuée le %s. Souhaitez-vous la restaurer ?",
+		"no": "Non merci.",
+		"yes": "C'est parti mon kiki !"
 	}
 }
