Specify reason of database error

--- a/Resources/i18n/default.json
+++ b/Resources/i18n/default.json
@@ -113,7 +113,7 @@
 	},
 	"restoreDatabase": {
 		"title": "Uh oh...",
-		"message": "We were unable to open the file containing your skins, for some reason.\nFortunately, there's a backup from %s. Would you like to restore it?",
+		"message": "We were unable to open the file containing your skins, for some reason.\nFortunately, there's a backup from %s.\nWould you like to restore it?",
 		"no": "No, thanks.",
 		"yes": "Let's do this!"
 	}
