Add space for translators in credits

--- a/Resources/i18n/default.json
+++ b/Resources/i18n/default.json
@@ -98,6 +98,7 @@
 		"title": "Credits",
 		"developer": "Developer:",
 		"platform": "Platform:",
+		"translators" : "Translators:",
 		"thanks": "Special thanks to:",
 		"modules": "Modules:"
 	},
