--- a/Resources/i18n/es.json
+++ b/Resources/i18n/es.json
@@ -1,120 +1,120 @@
 {
-	"main": {
-		"searchHint": "Buscar un skin...",
-		"skinList": "Lista de skins",
-		"addSkin": "Añadir un skin",
-		"editSettings": "Ajustar",
-		"skinDetails": {
-			"title": "Detalles del skin",
-			"description": "Descripción",
-			"creation": "Fetcha de creación",
-			"wear": "Usar este skin",
-			"close": "Cerrar"
+	"main":{
+		"searchHint":"Buscar un skin...",
+		"skinList":"Lista de skins",
+		"addSkin":"A\u00f1adir un skin",
+		"editSettings":"Ajustar",
+		"skinDetails":{
+			"title":"Detalles del skin",
+			"description":"Descripci\u00f3n",
+			"creation":"Fetcha de creaci\u00f3n",
+			"wear":"Usar este skin",
+			"close":"Cerrar"
 		},
-		"noSelectedSkin": "No skin seleccionado.",
-		"noContent": {
-			"title": "No skin se añadió aún.",
-			"help": "Para añadir un skin, toca \"+\"."
+		"noSelectedSkin":"No skin seleccionado.",
+		"noContent":{
+			"title":"No skin se a\u00f1adi\u00f3 a\u00fan.",
+			"help":"Para a\u00f1adir un skin, toca \"+\"."
 		},
-		"skins": "%s skins",
-		"progressBar": {
-			"login": "Conexión...",
-			"upload": "Subiendo skin...",
-			"loginFail": "Error de inicio",
-			"uploadFail": "Envío imposible",
-			"success": "¡Envío completo!"
+		"skins":"%s skins",
+		"progressBar":{
+			"login":"Conexi\u00f3n...",
+			"upload":"Subiendo skin...",
+			"loginFail":"Error de inicio",
+			"uploadFail":"Env\u00edo imposible",
+			"success":"\u00a1Env\u00edo completo!"
 		},
-		"skinUpload": {
-			"confirm": {
-				"title": "¿Reemplazar tu skin?",
-				"message": "¿Realmente quieres reemplazar tu skin con \"%s\"?",
-				"cancel": "No",
-				"okay": "Si"
+		"skinUpload":{
+			"confirm":{
+				"title":"\u00bfReemplazar tu skin?",
+				"message":"\u00bfRealmente quieres reemplazar tu skin con \"%s\"?",
+				"cancel":"No",
+				"okay":"Si"
 			},
-			"error": {
-				"title": "Error de envío",
-				"login": "Error de inicio de sesión en minecraft.net. Por favor comproba a tu nombre de usuario y contraseã.",
-				"server": "No se pudo conectar a minecraft.net. El sitio web podría no estar disponible. Comproba http://help.mojang.com y inténte de nuevo más tarde.",
-				"upload": "No se pudo enviar el skin en minecraft.net. Por favor inténte de nuevo más tarde."
+			"error":{
+				"title":"Error de env\u00edo",
+				"login":"Error de inicio de sesi\u00f3n en minecraft.net. Por favor comproba a tu nombre de usuario y contrase\u00e3.",
+				"server":"No se pudo conectar a minecraft.net. El sitio web podr\u00eda no estar disponible. Comproba http:\/\/help.mojang.com y int\u00e9nte de nuevo m\u00e1s tarde.",
+				"upload":"No se pudo enviar el skin en minecraft.net. Por favor int\u00e9nte de nuevo m\u00e1s tarde."
 			}
 		}
 	},
-	"settings": {
-		"title": "Ajustes",
-		"username": "Nombre de usario",
-		"password": "Contraseã",
-		"header": "Datos de conexión a Minecraft.net",
-		"footer": {
-			"migratedAccount": "Si tu cuenta se ha migrado a un Mojang account, tienes que utilizar tu dirección de correo electrónico en lugar de tu nombre de usuario Minecraft.",
-			"privacy": "Nota: NUNCA vamos a almacenar o utilizar cualquiera de tus datos para cualquier otra cosa que cambiar tus Minecraft skins. Los datos de tu cuenta son almacena de forma segura en el llavero de iOS."
+	"settings":{
+		"title":"Ajustes",
+		"username":"Nombre de usario",
+		"password":"Contrase\u00e3",
+		"header":"Datos de conexi\u00f3n a Minecraft.net",
+		"footer":{
+			"migratedAccount":"Si tu cuenta se ha migrado a un Mojang account, tienes que utilizar tu direcci\u00f3n de correo electr\u00f3nico en lugar de tu nombre de usuario Minecraft.",
+			"privacy":"Nota: NUNCA vamos a almacenar o utilizar cualquiera de tus datos para cualquier otra cosa que cambiar tus Minecraft skins. Los datos de tu cuenta son almacena de forma segura en el llavero de iOS."
 		}
 	},
-	"addProcess": {
-		"skinInfo": {
-			"title": "Skin información",
-			"shortTitle": "Skin info",
-			"name": "Skin nombre",
-			"nameHint": "Mi increible skin",
-			"description": "Descripción",
-			"fieldWidth": "165",
-			"error": {
-				"name": "Debes especificar un nombre para este skin."
+	"addProcess":{
+		"skinInfo":{
+			"title":"Skin informaci\u00f3n",
+			"shortTitle":"Skin info",
+			"name":"Skin nombre",
+			"nameHint":"Mi increible skin",
+			"description":"Descripci\u00f3n",
+			"error":{
+				"name":"Debes especificar un nombre para este skin."
 			},
-			"method": {
-				"title": "Añadir este skin...",
-				"pseudo": "Desde un usuario existente",
-				"url": "Desde una URL",
-				"cancel": "Cancelar"
+			"method":{
+				"title":"A\u00f1adir este skin...",
+				"pseudo":"Desde un usuario existente",
+				"url":"Desde una URL",
+				"cancel":"Cancelar"
 			}
 		},
-		"urlSelect": {
-			"urlTitle": "Pega o escribe la URL del skin aquí (debe ser un PNG archivo):",
-			"pseudoTitle": "Escribe el Minecraft username aquí:",
-			"blankField": "Este campo no puede ser vacío.",
-			"invalidUrl": "Este URL es inválida (DEBE ser un PNG archivo)."
+		"urlSelect":{
+			"urlTitle":"Pega o escribe la URL del skin aqu\u00ed (debe ser un PNG archivo):",
+			"pseudoTitle":"Escribe el Minecraft username aqu\u00ed:",
+			"blankField":"Este campo no puede ser vac\u00edo.",
+			"invalidUrl":"Este URL es inv\u00e1lida (DEBE ser un PNG archivo)."
 		},
-		"process": {
-			"title": "Tratamiento...",
-			"progress": {
-				"initial": "Reticulating Splines...",
-				"skin": "Cargando el skin...",
-				"preview": "Cargando la previa del skin...",
-				"database": "Registrando el skin en la base de datos...",
-				"success": "¡Añadido el skin con éxito! :)",
-				"fail": "Fail :("
+		"process":{
+			"title":"Tratamiento...",
+			"progress":{
+				"initial":"Reticulating Splines...",
+				"skin":"Cargando el skin...",
+				"preview":"Cargando la previa del skin...",
+				"database":"Registrando el skin en la base de datos...",
+				"success":"\u00a1A\u00f1adido el skin con \u00e9xito! :)",
+				"fail":"Fail :("
 			},
-			"error": {
-				"skin": "Error descargando el skin. Abortando.",
-				"preview": {
-					"title": "Error de red",
-					"message": "Error descargando la previa. No habrá ninguna previa para este skin. ¿Seguir de todas formas?",
-					"cancel": "Cancelar",
-					"ok": "Seguir"
+			"error":{
+				"skin":"Error descargando el skin. Abortando.",
+				"preview":{
+					"title":"Error de red",
+					"message":"Error descargando la previa. No habr\u00e1 ninguna previa para este skin. \u00bfSeguir de todas formas?",
+					"cancel":"Cancelar",
+					"ok":"Seguir"
 				}
 			}
 		},
-		"next": "Siguiente"
+		"next":"Siguiente"
 	},
-	"credits": {
-		"title": "Créditos",
-		"developer": "Desarrollador:",
-		"platform": "plataforma:",
-		"thanks": "Muchas gracias a:",
-		"modules": "Módulos:"
+	"credits":{
+		"title":"Cr\u00e9ditos",
+		"developer":"Desarrollador:",
+		"platform":"plataforma:",
+		"translators":"Traductores:",
+		"thanks":"Muchas gracias a:",
+		"modules":"M\u00f3dulos:"
 	},
-	"buttons": {
-		"edit": "Editar",
-		"done": "OK",
-		"close": "Cerrar"
+	"buttons":{
+		"edit":"Editar",
+		"done":"OK",
+		"close":"Cerrar"
 	},
-	"editSkin": {
-		"short": "Editar",
-		"title": "Editar skin detalles"
+	"editSkin":{
+		"short":"Editar",
+		"title":"Editar skin detalles"
 	},
-	"restoreDatabase": {
-		"title": "¡No no noooo!..",
-		"message": "No se pudo abrir el archivo que contiene sus skins, por alguna razón.\nPor suerte, hay una copia de seguridad de %s.\n¿Te gustaría restaurar?",
-		"no": "No, gracias.",
-		"yes": "Vamos!"
+	"restoreDatabase":{
+		"title":"\u00a1No no noooo!..",
+		"message":"No se pudo abrir el archivo que contiene sus skins, por alguna raz\u00f3n.\nPor suerte, hay una copia de seguridad de %s.\n\u00bfTe gustar\u00eda restaurar?",
+		"no":"No, gracias.",
+		"yes":"Vamos!"
 	}
 }
